fixup text on mobile

--- a/fallctf.com/guide-2024/theme/css/custom.css
+++ b/fallctf.com/guide-2024/theme/css/custom.css
@@ -1,8 +1,17 @@
 #back-button {
     color: var(--icons);
     text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 #back-button:hover {
     color: var(--icons-hover);
+}
+
+@media (max-width: 768px) {
+    #back-button-text {
+        display: none;
+    }
 }
